syntax = "proto3";
option go_package = "user/";

package user;

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message User {
    int64 id = 1;
    string username = 2;
}

message Base {
    int64 code = 1;
    string message = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    Base base = 1;
    User data = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    Base base = 1;
}